# MyCrypto

./: CMakeLists.txt
header/: MyCrypto.h
src/: main.cpp
